--- a/index.html
+++ b/index.html
@@ -10,18 +10,23 @@
 </head>
 <body>
 <h1 style="color:green;"> Welcome to Project IGI </h1>
+<span style="display:inline;"> Try to win this game,</span>
+<span>To lead the world of fire.</span>
+<h3>The Trailer &#8675; </h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/4tGXWOGHuHg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <h5 class="headingOne"> Play to Kill </h5>
 <h5 class="headingOne"> For Living </h5>
 <h5 id="headingid"> Make Your Choice </h5>
 <h5 id="headingid"> Boost Your Aim </h5>
 <img src="https://m.media-amazon.com/images/M/MV5BM2EwYTBlMDctNWExYi00NTM0LTg0MDctODhmMjg1NDBjMGFhXkEyXkFqcGdeQXVyNjI4MzU2NDA@._V1_UY268_CR87,0,182,268_AL_.jpg" width="400" height="300" alt="IGI">
-<img src="images/igi2">
-<p> This is a game where you can cheek you ability to complete a mission in hyper tension setuation</p>
-<p> To play the game click below </p>
+<p style="color:rgb(15,200,25);"> This is a game where you can cheek you ability to complete a mission in hyper tension setuation</p>
+<abb title="Project I.G.I">PI</abbr><b>was build in 2018 for the escoting purpose.</b> <p> To play the game click below </p>
+	<div></div>
 <a href="Play.html" target="_blank">Play</a>
 <p> You can Join Us On Facebook </p>
 <a href="https://facebook.com" target="_blank">Facebook</a>
-<h4> Contact Us By Clicking Below </h4>
-<a href="Contact.html">Contact</a>
+<h4> Contact Us In Layout Basis </h4>
+<a href="Contact.html" target="_blank">Contact Layout</a>
+<p> Buy it only &dollar;200 </p>
 </body>
 </html>
